@@ -88,6 +88,7 @@ static void usage(const char *prog, Config &conf)
           "\t-o, --output <DIR>  Output dir (must exist)\n"
           "\t-t, --tiff          Write TIFF image to \"<file>.tiff\" (false by default)\n"
           "\t-d, --dng           Write DNG image to \"<file>.dng\" (used by default if no output is supplied)\n",
+          "\t-r, --rotated       Image was taken in rotated orientation (false by default)\n",
           prog,
           conf.m_iThreads);
 }
@@ -123,6 +124,8 @@ int main(int argc, char *argv[])
       conf.m_bTiff = true;
     } else if (option.Matches("d", true) || option.Matches("-dng", true)) {
       conf.m_bDng = true;
+    } else if (option.Matches("r", true) || option.Matches("-rotated", true)) {
+      conf.m_bFlipped = true;
     } else if (option.Matches("p", true) || option.Matches("-threads", true)) {
       if (index + 1 < argc) {
         ++index;
